--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,10 @@ safty/training {
     background-color: red;
     grid-column: 2/2;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 
 body {
     background: blue;
