--- a/styles/style.css
+++ b/styles/style.css
@@ -18,12 +18,14 @@ gear_reviews {
     height: auto;
     background-color: green;
     grid-column: 1/1;
+    grid-row: 2/2
 }
 safty/training {
     width: 50%;
     height: auto;
     background-color: red;
     grid-column: 2/2;
+    grid-row: 2/2;
 }
 img {
     max-width: 100%;
