--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,20 @@ h1, h2, h3 {
     font-family: var(--heading-font);
     color: #2C3E50;
 }
+header {
+    padding: 1em;
+    text-align: center;
+    color: white;
+    background-color: #2C3E50 ;
+}
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 2fr 3fr;
     justify-items: center;
     gap: 1em;
+    grid-column: 1/3;
+    grid-row: 1/1;
 }
 gear_reviews {
     width: 50%;
@@ -33,5 +41,5 @@ img {
 }
 
 body {
-    background: blue;
+    background: white;
 }
