--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,8 @@ h1, h2, h3 {
     color: #2C3E50;
 }
 header {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
     padding: 1em;
     text-align: center;
     color: white;
