--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,10 @@ main {
     grid-template-rows: 2fr 3fr;
     justify-items: center;
     gap: 1em;
+}
+hero {
+    width: 100%;
+    height: auto;
     grid-column: 1/3;
     grid-row: 1/1;
 }
