--- a/styles/style.css
+++ b/styles/style.css
@@ -1,51 +1,82 @@
 :root{
---heading-font: Oswald, Arial, sans-serif;
---paragraph-font: Lato, Helvetica, sans-serif;
+    --heading-font: Oswald, Arial, sans-serif;
+    --paragraph-font: Lato, Helvetica, sans-serif;
 }
+
 h1, h2, h3 {
     font-family: var(--heading-font);
     color: #2C3E50;
 }
+
 header {
-    display: grid;
-    grid-template-columns: 1fr 9fr;
     padding: 1em;
-    text-align: center;
-    color: white;
-    background-color: #2C3E50 ;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
+nav {
+    background-color: #F39C12;
+    line-height: 3em;
+    text-align: center;
+    font-size: 1.2em;
+  }
+  nav  {
+    list-style-type: none;
+    display: flex;
+  
+  }
+  nav a {
+    padding:1em;
+    min-width: 120px;
+    text-decoration: none;
+    padding: 10px;
+  
+  }
+  nav a:link, nav a:visited {
+    color: #C0392B;
+  }
+  nav a:hover {
+    color: white;
+    background-color:  #2C3E50;
+  }
+
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 3fr;
+    grid-template-rows: auto auto;
     justify-items: center;
     gap: 1em;
+    padding-top: 5em; /* Adjust to ensure content is not hidden behind the fixed header */
 }
-hero {
+
+#hero {
     width: 100%;
     height: auto;
-    grid-column: 1/3;
-    grid-row: 1/1;
+    grid-column: 1 / 3;
+    background-color: #ecf0f1;
 }
-gear_reviews {
-    width: 50%;
+
+#gear_reviews, #safty_training {
+    width: 100%;
     height: auto;
-    background-color: green;
-    grid-column: 1/1;
-    grid-row: 2/2
+    background-color: #2C3E50;
+    color: white;
+    padding: 1em;
 }
-safty/training {
-    width: 50%;
-    height: auto;
-    background-color: red;
-    grid-column: 2/2;
-    grid-row: 2/2;
+
+#gear_reviews {
+    grid-column: 1 / 2;
 }
+
+#safty_training {
+    grid-column: 2 / 3;
+}
+
 img {
     max-width: 100%;
     height: auto;
 }
-
 body {
     background: white;
 }
